--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==6.7
 decorator==4.1.2
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
+flask_mysqldb==0.2.0
 ipython==6.2.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
