--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Pygments==2.2.0
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.15
+tensorflow==1.13.1
 traitlets==4.3.2
 wcwidth==0.1.7
 Werkzeug==0.12.2
