--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-SQLAlchemy==2.3.2
 flask_mysqldb==0.2.0
 ipython==6.2.1
 ipython-genutils==0.2.0
+imutils==0.5.2
 itsdangerous==0.24
 jedi==0.11.0
 Jinja2==2.10
