--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ jedi==0.11.0
 Jinja2==2.10
 keras==2.2.4
 MarkupSafe==1.0
-opencv2-python
+opencv-python
 parso==0.1.0
 passlib==1.7.1
 pexpect==4.3.0
