--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-appnope==0.1.0
-click==6.7
+# appnope==0.1.0
+# click==6.7
 decorator==4.1.2
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
@@ -13,7 +13,7 @@ keras==2.2.4
 opencv-python
 parso==0.1.0
 passlib==1.7.1
-pexpect==4.3.0
+# pexpect==4.3.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 psycopg2==2.7.3.2
@@ -23,8 +23,8 @@ simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.15
 tensorflow==1.13.1
-traitlets==4.3.2
-wcwidth==0.1.7
+# traitlets==4.3.2
+# wcwidth==0.1.7
 Werkzeug==0.12.2
 gunicorn==19.7.1
 
