--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,10 @@ prompt-toolkit==1.0.15
 psycopg2==2.7.3.2
 ptyprocess==0.5.2
 Pygments==2.2.0
+scikit-learn==1.16.2
 simplegeneric==0.8.1
 six==1.11.0
+sklearn
 SQLAlchemy==1.1.15
 tensorflow==1.13.1
 traitlets==4.3.2
